fixed dropdown overflow

--- a/src/components/ProcessAttribute/styles/processattributefield.scss
+++ b/src/components/ProcessAttribute/styles/processattributefield.scss
@@ -16,7 +16,6 @@
 		color: rgba(34,34,34,0.48);
 		white-space: nowrap;
 		min-width: 0;
-		overflow: hidden;
 		text-overflow: ellipsis;
 		margin-bottom: 8px;
 		margin-right: 8px;
